--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -97,6 +97,7 @@
      <Compile Include="Assets\Resources\Scripts\Enemy\EnemySpawner.cs" />
      <Compile Include="Assets\Resources\Scripts\Environment\MapManager.cs" />
      <Compile Include="Assets\Resources\Scripts\Environment\Props\Arrow.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Props\AttackUpPotion.cs" />
      <Compile Include="Assets\Resources\Scripts\Environment\Props\DoorController.cs" />
      <Compile Include="Assets\Resources\Scripts\Environment\Props\HastePotion.cs" />
      <Compile Include="Assets\Resources\Scripts\Environment\Props\HealthPotion.cs" />
@@ -183,6 +184,7 @@
      <None Include="Assets\Shaders\Scrolls_1_Mat.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\VertexAnimation.shader" />
      <None Include="Assets\Shaders\Mat_Torture_Wheel.shader" />
+     <None Include="Assets\Shaders\Mat_FireMount_1.shader" />
      <None Include="Assets\Shaders\Mat_SM_WoodenChair.shader" />
      <None Include="Assets\Shaders\Mat_Stocks_wood.shader" />
      <None Include="Assets\Shaders\Mat_SM_FireTrap.shader" />
@@ -225,6 +227,7 @@
      <None Include="Assets\Shaders\Mat_Potion_01.shader" />
      <None Include="Assets\Shaders\TombFancy_1_Mat.shader" />
      <None Include="Assets\Shaders\Zombie_Mat.shader" />
+     <None Include="Assets\Shaders\Mat_Barrel_1.shader" />
      <None Include="Assets\Shaders\Wall_8_1_Mat.shader" />
      <None Include="Assets\Shaders\Mat_CoatOfArms.shader" />
      <None Include="Assets\Shaders\MultiTexture.shader" />
@@ -250,10 +253,10 @@
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.1/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="P2T">
- <HintPath>C:/Users/SeniorProj/Desktop/senior project/trunk/Assets/Exploder/3rd/P2T.dll</HintPath>
+ <HintPath>Z:/profiledata/Desktop/SP2/trunk/Assets/Exploder/3rd/P2T.dll</HintPath>
  </Reference>
  <Reference Include="Rewired_Core">
- <HintPath>C:/Users/SeniorProj/Desktop/senior project/trunk/Assets/Rewired/Internal/Libraries/Runtime/Rewired_Core.dll</HintPath>
+ <HintPath>Z:/profiledata/Desktop/SP2/trunk/Assets/Rewired/Internal/Libraries/Runtime/Rewired_Core.dll</HintPath>
  </Reference>
   </ItemGroup>
   <ItemGroup>
