Made improvements to the stat bar. Moving stat bar related things into a separate script that will handle resizing the health and mana bar as well as control the display of the potion image and score. This can also be used with Bosses. All potion images should go in 'Assets/Resources/Textures/GUI/'.
!!!!!!!!!!!!!!!!!!!!!!!!
       ___  _____  ____  _
|\  | |   |   |   |____ |_|
| \ | |   |   |   |      _
|  \| |___|   |   |____ |_|

Reading the log is a very useful skill because it would inform you that...
The Woodsman's basic and special attack have been working for over a month now, so stop messing with them.

--- a/Assembly-CSharp-Editor-vs.csproj
+++ b/Assembly-CSharp-Editor-vs.csproj
@@ -91,6 +91,7 @@
      <None Include="Assets\Shaders\Mat_SM_Cheese.shader" />
      <None Include="Assets\Rewired\Documentation\licences.txt" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\MaterialPlatform.shader" />
+     <None Include="Assets\Shaders\Mat_Firestorm.shader" />
      <None Include="Assets\Shaders\Mat_Bench.shader" />
      <None Include="Assets\Shaders\NewShader.shader" />
      <None Include="Assets\Shaders\Mat_Chair.shader" />
